--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ theme = "tailwind"
   contentTypeName = "posts"
 
   [params.header]
-    logo = "/assets/protonium.svg"
+    logo = "/assets/protonium.png"
 
   [params.footer]
     since = 2024
